------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.0 branch)

------------------------------------------------------------------------------


Interchange 5.2.0 released 2004-05-05.


Link
----

* Add Interchange::Link (mod_perl 1.99/2.0 link program) by Mike Heins, which
  optionally can replace vlink and tlink. It includes many features found in
  mod_interchange and also a mechanism to deliver static files outside of
  Interchange.

Debian
------
  
* Now creating system group for Interchange user instead of a regular one
  (Closes: #246323)

RPM
---

* Install te editor for tab-delimited files into /usr/bin.


------------------------------------------------------------------------------


Interchange 5.1.1 released 2004-04-20.

Core
----

* Make old-style Matrix options work with arbitrary part numbers.

* Remove security hole found during a code read, where by a non-admin user
  with write permission to files for ITL could elevate their login status
  to admin.

      logout=[userdb logout]
      [calc]
          $Config->{AdminUserDB}{default} = 1;
      [/calc]

      login=[userdb function=login username=mike password=pass]

  This would cause setting of $Vend::admin.

* Create a new %Global::ReadOnlyCfg hash with the pristine values from the
  initial configuration. At catalog configuration time, the values from
  AdminUserDB and UserDB_repository are copied over.

* The UserDB login function now references the read-only config to
  determine admin status.

Payment
-------

* Add payment module for Concord EFSNet's gateway
  (http://www.concordefsnet.com/), written and donated by Chris Wenham of
  Synesmedia (http://www.synesmedia.com/). Thanks!


------------------------------------------------------------------------------


Interchange 5.1.0 released 2004-04-08.

Security
--------
