@@ -2,9 +2,9 @@
 
                            I N T E R C H A N G E
 
-Interchange 5.2.0
+Interchange 5.2.1
 
-Copyright (C) 2002-2004 Interchange Development Group
+Copyright (C) 2002-2005 Interchange Development Group
 Copyright (C) 1996-2002 Red Hat, Inc.
 
 Originally based on Vend 0.2 and 0.3, copyright 1995-96 by Andrew M. Wilcox.
