@@ -6,6 +6,17 @@
 ------------------------------------------------------------------------------
 
 
+Interchange 5.2.1 released 2005-09-22.
+
+
+Security
+---------
+
+* Fix SQL injection vulnerability in pages/forum/submit.html.
+
+------------------------------------------------------------------------------
+
+
 Interchange 5.2.0 released 2004-05-05.
 
 
